--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"No tests yet\" && exit 0"
+    "setup": "node setup-db.js",
+    "test": "node test-api.js",
+    "debug": "node --inspect server.js"
   },
   "keywords": ["vendas", "fiado", "nodejs", "api"],
   "author": "Sistema Vendas",
